--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-MONGODB_URI="mongodb+srv://shafi02367:syedShafi8341@taskcluster.piktc.mongodb.net/?retryWrites=true&w=majority&appName=taskCluster"
+MONGODB_URI="mongodb+srv://shafi02367:syedShafi8341@taskcluster.piktc.mongodb.net/taskDB?retryWrites=true&w=majority&appName=taskCluster"
+# MONGODB_URI="mongodb://localhost:27017/"
